2014-01-29  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc term-ja.diff:  Sync translation to version 1.848

2014-01-29  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c:  Horizontal scroll wheel support.

2014-01-29  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/command.c: Update GPVAL_* variables after a refresh command.
	Bug #1327

	* src/qtterminal/QtGnuplotWidget.* src/qtterminal/QtGnuplotApplication.cpp:
	Only show the QtGnuplotWindow after a size event is received from gnuplot.
	It avoids a visible fast resize of the window after the first plot command,
	and it also avoids that the plot window infrequently sticks to a wrong size.

2014-01-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/time.c (xstrftime):  Explicit use of (double) when processing
	fractional seconds.

	* src/Makefile.am:  Build *.moc and *.qrc files for qt terminal in the
	same subdirectory as the *.o files.

	* src/datafile.c:  [xyz]ticlabels were losing resolution due to being
	passed through a float rather than a double.

	* src/datafile.c:  Handle error case of ticlabel function not returning
	a string.

2014-01-26  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/qt_term.cpp: Implement font metric caching. This solves
	a flickering issue when a large number of font changes are called (for
	example when rotating the world plot in world2.dem).

	* src/qtterminal/QtGnuplotInstance.*: New public function that sends a
	command to gnuplot and blocks until it receives the answer.

2014-01-21  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/qt_term.cpp: Fixed a regression introduced on 2014-01-18
	that caused glitches in font rendering when GE_fontprops events are missed.

2014-01-18  Bastian Maerkisch  <bmaerkisch@web.de>

	* configure.in config/mingw/Makefile config/msvc/Makefile
	src/show.c src/term.h src/win/wgnuplib.h src/win/wpause.c